--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 master_app/static/assets/img/*
 master_app/static/assets/pdfs/*
-static
+master_app/static/assets/army/*
+master_app/static/assets/coas/*
+master_app/static/assets/Gallery/*
+master_app/static/assets/*.pdf
